# jedidb

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
references/: CLI.md  QUERIES.md  SCHEMA.md
src/jedidb/: __init__.py  config.py  init.sql  utils.py
src/jedidb/cli/: __init__.py  app.py  formatters.py
src/jedidb/cli/commands/: __init__.py  calls.py  clean.py  export.py  index.py  inheritance.py  init.py  query.py  search.py  show.py  source.py  stats.py
src/jedidb/core/: __init__.py  analyzer.py  database.py  indexer.py  models.py  search.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_database.py  test_indexer.py  test_views.py  test_watch_mode.py
