[project]
name = "jedidb"
version = "0.3.8"
description = "Python code index with Jedi analysis and full-text search"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Michael Halle" }
]
requires-python = ">=3.12"
dependencies = [
    "jedi>=0.19.0",
    "duckdb>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "watchfiles>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
jedidb = "jedidb.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jedidb"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "jedidb/README.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
